avoid scrollbar intersection in osx

--- a/src/popup/components/tweetList.styl
+++ b/src/popup/components/tweetList.styl
@@ -4,6 +4,10 @@
 	.tweet
 		border-top 1px solid rgba(192, 192, 192, .5)
 
+		// just to avoid scrollbar intersection in os x
+		.osx &
+			padding-right: 12px;
+
 		&:first-child
 			border-top initial
 
